--- a/app/views/authorities/show.html.erb
+++ b/app/views/authorities/show.html.erb
@@ -41,6 +41,11 @@
       <%= f.text_field :url %>
     </div>
 
+    <div class="field">
+    <%= f.label "Is current:  " %>
+    <%= f.check_box :current %>
+    </div>
+
     <%= f.fields_for :photos, f.object.photos.new do |ff| %>
       <h2>Add photo</h2>
           <div class="field">
