--- a/app/views/authorities/index.js.erb
+++ b/app/views/authorities/index.js.erb
@@ -1,11 +1,11 @@
-  $(".pagination a").on("click",
-                    function(e){
-                    var aaa = $("#prjinator").prev()[0];
-                       console.log($(aaa).attr("id"));
-                    });
+$("#prjinator").on("click",
+                  function(){
+                    $("#prj").html("<%= escape_javascript render(@projects) %>")
+                    $("#prjinator").html("<%= escape_javascript(paginate(@projects, remote: true)) %>")
+                  });
 
-$("#prj").html("<%= escape_javascript render(@projects) %>")
-$("#prjinator").html("<%= escape_javascript(paginate(@projects, remote: true)) %>")
-
-$("#ppr").html("<%= escape_javascript render(@papers) %>")
-$("#pprinator").html("<%= escape_javascript(paginate(@papers, remote: true)) %>")
+  $("#pprinator").on("click",
+                    function(){
+                      $("#ppr").html("<%= escape_javascript render(@papers) %>")
+                      $("#pprinator").html("<%= escape_javascript(paginate(@papers, remote: true)) %>")
+                  });
