custom pagination in progress

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -223,6 +223,16 @@ width: 90%;
   height: auto;
 }
 
+.putinline {
+  clear: both;
+  margin: 10px;
+  padding-top: 40px;
+}
+
+#curt {
+  background-color: lightblue;
+  }
+
 #prj {
   background-color: lightgrey;
   }
