custom pagination with mistakes

--- a/app/views/authorities/index.html.erb
+++ b/app/views/authorities/index.html.erb
@@ -28,7 +28,7 @@
 
     <section  id="prj" class='indexpage row'>
     <h3 class="text-center animated fadeInUp">Projects</h3>
-      <div>
+      <div id="proj">
         <!-- render @projects -->
         <%= render :partial => "projects/project", :collection => @aprojects[0], :as => :project %>
       </div>
