--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,4 +1,6 @@
     <div class="col-md-3 col-sm-6 text-center">
+      <%= link_to [@authority, project] do%>
       <%= content_tag :h5, "#{project.title}"%>
       <%= image_tag url_for(:controller => "photos", :action => "show_project", :project_id=>project.id), class: "img-fit img-rounded"%>
+      <% end %>
     </div>
