show pagination if 2 pages

--- a/app/views/authorities/index.html.erb
+++ b/app/views/authorities/index.html.erb
@@ -32,7 +32,7 @@
         <!-- render @projects -->
         <%= render :partial => "projects/project", :collection => @aprojects[0], :as => :project %>
       </div>
-    <% if (@aprojects.count > 1)   %>
+    <% if (@aprojects[1].present?) %>
       <div  id="proj_page" class="putinline text-center">
       <%= render :partial => "projects/project_pages", locals: {current_page: @c_page, pages: @aprojects.count } %>
       </div>
@@ -44,7 +44,7 @@
       <div id="papr">
         <%= render :partial => "papers/paper", :collection => @apapers[0], :as => :paper %>
       </div>
-    <% if (@apapers.count > 1)   %>
+      <% if (@apapers[1].present?) %>
       <div id="papr_page" class="putinline text-center">
       <%= render :partial => "papers/paper_pages", locals: {current_page: @c_page, pages: @apapers.count } %>
       </div>
