--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer text-center">
+<div class="container footer text-center">
  <div class="col-md-offset-3 col-sm-offset-3 col-md-3 col-sm-3 col-xs-12">
     <h5><%= link_to "Projects", "/#prj"%></h5>
     <h5><%= link_to "Papers", "/#ppr"%></h5>
